Revise README for complete feature documentation
Updated README to reflect complete feature documentation and reorganized sections for better clarity.